<resources>
    <string name="app_name">first_task</string>
    <string name="enter_the">Enter the</string>
    <string name="world_of">World of</string>
    <string name="learning">Learning</string>
    <string name="new_here">New here?</string>
    <string name="sign_up">Sign up</string>


    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="branch">more</string>


    <string name="college">college</string>
    <string name="contact">contact</string>
    <string name="make">make</string>
    <string name="Your">Your</string>
    <string name="way_in">way in</string>
    <string name="Email">Email</string>
    <string name="retype_password">retype password</string>
    <string name="next">next</string>
    <string name="just_a_little">just a little</string>
    <string name="more">more …</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="success">Welcome</string>
    <string name="second">Please do not leave field empty</string>

    <string name="to_be_designed_later">To be designed later</string>

    <string name="contact1">Contact</string>
    <string name="college1">College</string>
    <string name="name1">Name</string>
    <string name="branch1">Branch</string>

    <string name="todo1">TODO</string>
    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="open_book">Open Book</string>
    <string name="renew">Renew</string>
    <string name="plus">Plus</string>
    <string name="user">User</string>



</resources>