<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".signup">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="425dp"
        android:layout_height="724dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sign_up___bg" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="232dp"
        android:text="@string/make"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Your"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/way_in"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995"
        app:srcCompat="@drawable/page1" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/oval"
        android:gravity="start|center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:hint="@string/email"
        android:labelFor="@id/button3"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.457" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/oval"
        android:gravity="start|center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:hint="@string/Password"
        android:password="true"
        android:labelFor="@id/button4"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.577" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/oval"
        android:gravity="start|center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:hint="@string/retype_password"
        android:labelFor="@id/button5"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685"
        tools:ignore="MissingClass" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/oval"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />





</androidx.constraintlayout.widget.ConstraintLayout>